<resources>
    <string name="app_name">Ubike</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">使用說明</string>
    <string name="cost">收費方式 </string>
    <string name="stations">站點資訊</string>
    <string name="news">最新消息</string>
    <string name="events">活動專區</string>
    <string name="label_text">登入</string>
    <string name="search_stations">搜尋站點</string>
    <string name="city">縣市</string>
    <string name="area">區域</string>
    <string name="station_name">站點名稱</string>
    <string name="taipei">台北市</string>
</resources>