<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.ubike.viewmodel.MobileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/test_mobile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- logo -->
        <View
            android:id="@+id/logo_180x18"
            android:layout_width="65dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/logo_180x180"
            app:layout_constraintBottom_toTopOf="@id/line_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- icon -->
        <View
            android:id="@+id/icon_menu"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="29dp"
            android:background="@drawable/icon_menu"
            app:layout_constraintBottom_toTopOf="@id/line_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Line 1 -->
        <View
            android:id="@+id/line_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="72dp"
            android:background="#EBEBEB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 站點資訊 -->
        <TextView
            android:id="@+id/tv_stations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="90dp"
            android:gravity="top"
            android:text="@string/stations"
            android:textAppearance="@style/my_style_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- search -->
        <com.app.ubike.ui.MyAutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_light_gray_radius"
            android:drawableEnd="@drawable/icon_search"
            android:hint="@string/search_stations"
            android:inputType="text"
            android:letterSpacing="0.1"
            android:lineSpacingExtra="-4sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="#B5CC22"
            android:textColorHint="#AEAEAE"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stations"
            android:imeOptions="actionDone"
            android:popupBackground="@drawable/bg_light_gray_radius"
            android:dropDownVerticalOffset="16dp"
            android:completionThreshold="1"
            app:dropdownItems="@{viewModel.snaList}"
            />

        <!-- 站點列表區塊 -->
        <LinearLayout
            android:id="@+id/ll_stations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="24dp"
            android:clipChildren="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autoCompleteTextView">
            <!--標題列-->
            <LinearLayout
                android:id="@+id/ll_item"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="#B5CC22"
                android:gravity="center"
                android:orientation="horizontal">

                <!--城市-->
                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/city"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!--區域-->
                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/area"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!--站點名稱-->
                <TextView
                    android:id="@+id/tv_station_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:lineSpacingExtra="3sp"
                    android:padding="3dp"
                    android:text="@string/station_name"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--站點列表-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:listData="@{viewModel.displayedStations}"
                tools:listitem="@layout/item_layout_01" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
